Change customers to messages

--- a/index.css
+++ b/index.css
@@ -1,3 +1,41 @@
+body {
+	margin: 0;
+}
+
 main {
-  text-align: center;
+  /*text-align: center;*/
+}
+
+.container {
+	max-width: 1050px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.content {
+	margin-top: 30px;
+	text-align: center;
+}
+
+li {
+	list-style: none;
+}
+
+.header {
+	/*padding-top: 10px;*/
+	border-bottom: 1px solid black;
+	background: grey;
+	margin: 0;
+	height: 80px;
+}
+
+.header-title {
+	float: left;
+}
+
+.login-block {
+	border: 1px solid black;
+	margin: 1em 0;
+	padding: 2px;
+	float: right;
 }
