--- a/index.css
+++ b/index.css
@@ -6,10 +6,10 @@ main {
   /*text-align: center;*/
 }
 
-.content {
+/*.content {
 	margin-top: 30px;
 	text-align: center;
-}
+}*/
 
 li {
 	list-style: none;
